--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,11 +1,11 @@
 .page {
-  --background: #fafafa;
+  --background: #55554f;
   --foreground: #fff;
 
   --text-primary: #000;
   --text-secondary: #666;
 
-  --button-primary-hover: #383838;
+  --button-primary-hover: #f7ab39;
   --button-secondary-hover: #f2f2f2;
   --button-secondary-border: #ebebeb;
 
@@ -25,7 +25,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  background-color: var(--foreground);
+  background-color: var(--background);
   padding: 120px 60px;
 }
 
@@ -128,13 +128,13 @@ a.secondary {
   }
 
   .page {
-    --background: #000;
+    --background: #464643;
     --foreground: #000;
 
     --text-primary: #ededed;
     --text-secondary: #999;
 
-    --button-primary-hover: #ccc;
+    --button-primary-hover: #f7ab39;
     --button-secondary-hover: #1a1a1a;
     --button-secondary-border: #1a1a1a;
   }
